Fixes menu-side-nav not covering total height in patient-view; Removes dead code in overview-view, summary-view and patient-view

--- a/client/src/app/patient-status-view/patient-status-view.component.css
+++ b/client/src/app/patient-status-view/patient-status-view.component.css
@@ -1,8 +1,7 @@
- 
+
 .gridListContainer{
-    height: 100%;
-    width: 100%;
-    position: fixed;
+    height: auto;
+    width: auto;
     padding: 24px;
 }
 
@@ -21,6 +20,6 @@ mat-grid-list{
     width: 250px;
     display: flex;
     flex-direction: column;
-    padding: 0px;
+    padding: 0;
 
 }
